Activated tests again

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ otp_release:
 
 script:
   - make
-#  - rebar eunit -v skip_deps=true
+  - make test
   - make plt
   - make dialyze
 notifications:
